src/test/ui/internal/internal-unstable-thread-local.stderr
error[E0658]: use of unstable library feature 'function'
  --> $DIR/internal-unstable-thread-local.rs:9:32
   |
LL | thread_local!(static BAR: () = internal_unstable::unstable());
   |                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(function)] to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
